--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ms">
 <head>
   <meta charset="UTF-8">
-  <title>Halaman Bacaan Interaktif</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>Halaman Bacaan Interaktif</title>
   <style>
     body {
       font-family: 'Century Gothic';
