--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
       padding: 20px;
       background-color: #f8f8f8;
     }
+
+    <script>
+// Sekat klik kanan
+document.addEventListener('contextmenu', e => e.preventDefault());
+
+// Sekat highlight teks
+document.addEventListener('selectstart', e => e.preventDefault());
+document.addEventListener('mousedown', e => e.preventDefault());
+
+// Sekat kekunci tertentu (F12, Ctrl+Shift+I, Ctrl+U, Ctrl+S)
+document.onkeydown = function(e) {
+  if (
+    e.keyCode === 123 || // F12
+    (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // Ctrl+Shift+I
+    (e.ctrlKey && e.keyCode === 85) || // Ctrl+U
+    (e.ctrlKey && e.keyCode === 83) // Ctrl+S
+  ) {
+    return false;
+  }
+};
+</script>
+
 <link rel="manifest" href="manifest.json">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script>
@@ -125,6 +147,16 @@
       color: gold;
       margin-top: 10px;
     }
+
+    <style>
+body {
+  -webkit-user-select: none; /* Chrome, Safari */
+  -moz-user-select: none;    /* Firefox */
+  -ms-user-select: none;     /* IE/Edge */
+  user-select: none;         /* Standard */
+}
+</style>
+
   </style>
 </head>
 <body>
