--- a/index.html
+++ b/index.html
@@ -5,16 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Halaman Bacaan Interaktif</title
 
-<style>
-/* Sekat pengguna pilih atau salin teks */
-body {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-</style>
-
   <style>
     body {
       font-family: 'Century Gothic';
@@ -31,6 +21,29 @@ body {
       .then(() => console.log("Service Worker didaftarkan"));
   }
 </script>
+    
+    <script>
+  // Sekat klik kanan
+  document.addEventListener('contextmenu', e => e.preventDefault());
+
+  // Sekat pilih teks
+  document.addEventListener('selectstart', e => e.preventDefault());
+  document.addEventListener('mousedown', e => e.preventDefault());
+
+  // Sekat kekunci Ctrl+U, Ctrl+S, F12, Ctrl+Shift+I
+  document.onkeydown = function(e) {
+    if (
+      e.keyCode === 123 || // F12
+      (e.ctrlKey && e.shiftKey && e.keyCode === 73) || // Ctrl+Shift+I
+      (e.ctrlKey && e.keyCode === 85) || // Ctrl+U
+      (e.ctrlKey && e.keyCode === 83) // Ctrl+S
+    ) {
+      e.preventDefault();
+      return false;
+    }
+  };
+</script>
+
 
     .pembungkus {
       background-color: white;
@@ -159,6 +172,14 @@ document.onkeydown = function(e) {
       color: gold;
       margin-top: 10px;
     }
+
+    * {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 
   </style>
 </head>
