--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
+<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js')
+      .then(() => console.log('Service Worker Daftar!'));
+  }
+</script>
+
   <title>Halaman Bacaan Interaktif</title>
   <style>
   body {
