--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       .then(() => console.log('Service Worker Daftar!'));
   }
 </script>
+  
+  <link rel="icon" type="image/png" sizes="192x192" href="images_icon/icon-192.png">
+
 
   <title>Halaman Bacaan Interaktif</title>
   <style>
