--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
   }
 </script>
   
-  <link rel="icon" type="image/png" sizes="192x192" href="images_icon/icon-192.png">
+ <link rel="manifest" href="manifest.json">
+<link rel="icon" type="image/png" href="images_icon/icon192.png">
 
 
   <title>Halaman Bacaan Interaktif</title>
